--- a/ExploratoryDataAnalysis.ipynb
+++ b/ExploratoryDataAnalysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dad5b3b3",
+   "id": "bc9fbcad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ec2df6fb",
+   "id": "05bcc698",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fc5d94e0",
+   "id": "a84150a9",
    "metadata": {},
    "outputs": [
     {
@@ -56,18 +56,61 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1f4257c0",
+   "id": "b8aecf16",
    "metadata": {},
    "outputs": [],
    "source": [
     "path = 'https://raw.githubusercontent.com/a-forty-two/hsbc-gcp-private/main/data.csv'\n",
-    "data = pd.read_csv(path)"
+    "data = pd.read_csv(path)\n",
+    "# if this block gives you a connection or reset or http or any other error, ignore and use the block below instead"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d7a478c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SYSTEM_WGETRC = c:/progra~1/wget/etc/wgetrc\n",
+      "syswgetrc = C:\\Program Files (x86)\\Gow/etc/wgetrc\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data.csv\n",
+      "ExploratoryDataAnalysis.ipynb\n",
+      "helloscript.py\n",
+      "lambdas_comprehension.ipynb\n",
+      "Untitled.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "#another way of downloading and using the data\n",
+    "!wget https://raw.githubusercontent.com/a-forty-two/hsbc-gcp-private/main/data.csv -o data.csv\n",
+    "!ls\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "45e41b7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('data.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cc2acbc8",
+   "id": "174ff693",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c1a0e6f6",
+   "id": "6e347d70",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fc1eb6ef",
+   "id": "b555bdcc",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "680aa537",
+   "id": "ef88de33",
    "metadata": {
     "scrolled": true
    },
@@ -629,9 +672,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7441963d",
+   "id": "ed2a9e73",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -891,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a3f7463",
+   "id": "3a26d850",
    "metadata": {},
    "outputs": [],
    "source": []
